# CinemaManager

./: CMakeLists.txt
commonLibrary/: GenericLib.h
include/cinema/: Client.h  Film.h  Room.h  Salle.h  Ticket.h
src/: main.cpp
src/cinema/: Client.cpp  Film.cpp  Room.cpp  Salle.cpp  Ticket.cpp
